--- a/index.html
+++ b/index.html
@@ -194,33 +194,38 @@
 				<!-- card -->
 				<div class="card_block">
 					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<p class="project_name">Brand Integration in Real Estate</p>
+					<p class="project_headline">An introduction</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_rs_02"><img src=""></a>
+					<p class="project_name">Chapman Market</p>
+					<p class="project_headline">Brand Partnerships</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_rs_03"><img src=""></a>
+					<p class="project_name">Urban Confluence</p>
+					<p class="project_headline">Brand Partnerships</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_rs_04"><img src=""></a>
+					<p class="project_name">Brickell City Centre</p>
+					<p class="project_headline">Out-of-Home Networks</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
-				</div>				
+					<a href="index.html" class="card project_rs_05"><img src=""></a>
+					<p class="project_name">Centennial Yards</p>
+					<p class="project_headline">Network Masterplanning</p>
+				</div>			
+        				<!-- card -->
+				<div class="card_block">
+					<a href="index.html" class="card project_rs_06"><img src=""></a>
+					<p class="project_name">Geospatial Data Infrastructure</p>
+				</div>		
 			</div>
 		</div>
 
@@ -231,33 +236,32 @@
 			<div class="img_slider">
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_ed_01"><img src=""></a>
+					<p class="project_name">Responsive Environments</p>
+					<p class="project_headline">Just scratching the surface</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_ed_02"><img src=""></a>
+					<p class="project_name">Times Square Out-of-Home</p>
+					<p class="project_headline">Integrated Digital Experiences</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_ed_03"><img src=""></a>
+					<p class="project_name">Duke Health</p>
+					<p class="project_headline">Digital Experience Design</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_ed_04"><img src=""></a>
+					<p class="project_name">United States Olympic Museum Retail</p>
+					<p class="project_headline">Concept Design</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_ed_05"><img src=""></a>
+					<p class="project_name">Research Methods</p>
 				</div>				
 			</div>
 		</div>		
@@ -269,33 +273,28 @@
 			<div class="img_slider">
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_d_01"><img src=""></a>
+					<p class="project_name">Portfolio Website</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_d_02"><img src=""></a>
+					<p class="project_name">Web Explorations</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
+					<a href="index.html" class="card project_d_03"><img src=""></a>
 					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
+					<a href="index.html" class="card project_d_04"><img src=""></a>
 					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
+					<a href="index.html" class="card project_d_05"><img src=""></a>
 					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
 				</div>				
 			</div>
 		</div>
@@ -307,33 +306,28 @@
 			<div class="img_slider">
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_vm_01"><img src=""></a>
+					<p class="project_name">Digital Graffiti</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_vm_02"><img src=""></a>
+					<p class="project_name">Projection Mapping Experiments</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_vm_03"><img src=""></a>
+					<p class="project_name">Motion Graphics</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_vm_04"><img src=""></a>
+					<p class="project_name">Typography</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_vm_05"><img src=""></a>
+					<p class="project_name">Print Media</p>
 				</div>				
 			</div>
 		</div>	
@@ -345,34 +339,21 @@
 			<div class="img_slider">
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_sd_01"><img src=""></a>
+					<p class="project_name">Spatial Web</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_sd_01"><img src=""></a>
+					<p class="project_name">Design Tools</p>
+					<p class="project_headline">Modular design and automation</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
-				</div>
-				<!-- card -->
-				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
-				</div>
-				<!-- card -->
-				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
-				</div>				
+					<a href="index.html" class="card project_sd_01"><img src=""></a>
+					<p class="project_name">Organizational Structures</p>
+					<p class="project_headline">Workflows and project types</p>
+				</div>			
 			</div>
 		</div>	
 
@@ -383,34 +364,38 @@
 			<div class="img_slider">
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_a_01"><img src=""></a>
+					<p class="project_name">Littleton Academy</p>
+					<p class="project_headline">Charter High School</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_a_02"><img src=""></a>
+					<p class="project_name">University Heights Charter School</p>
+					<p class="project_headline">Adaptive Reuse</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_a_03"><img src=""></a>
+					<p class="project_name">Bancroft</p>
+					<p class="project_headline">Special Needs Campus</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_a_04"><img src=""></a>
+					<p class="project_name">The Eden Institute</p>
+					<p class="project_headline">Special Needs School</p>
 				</div>
 				<!-- card -->
 				<div class="card_block">
-					<a href="index.html" class="card project_rs_01"><img src=""></a>
-					<p class="project_name">project name</p>
-					<p class="project_headline">project description, year, other project stats</p>
+					<a href="index.html" class="card project_a_05"><img src=""></a>
+					<p class="project_name">Graduate Work</p>
 				</div>				
+        <!-- card -->
+        <div class="card_block">
+					<a href="index.html" class="card project_a_06"><img src=""></a>
+					<p class="project_name">Undergraduate Work</p>
+				</div>		
 			</div>
 		</div>
     </div>
@@ -431,8 +416,6 @@
         </div>
       </div>
       <div class="project_gallery_768">
-
-
         <div class="thumbnail one_three a01"></div>
         <div class="thumbnail two_three a02 architecture"></div>
         <div class="thumbnail three_four a03 visual-media"></div>
@@ -440,50 +423,48 @@
         <div class="thumbnail one_one a05 visual-media"></div>
         <div class="thumbnail one_three a06"></div>
         <div class="thumbnail three_three a07 development"></div>
-        <div class="thumbnail one_one a08"></div>
+        <div class="thumbnail one_one a08 architecture"></div>
         <div class="thumbnail one_two a09 visual-media"></div>
         <div class="thumbnail one_one a10 experience-design"></div>
 <!-- no 11 intentionally left blank -->
         <div class="thumbnail two_five a12 visual-media"></div>
         <div class="thumbnail four_five a13 experience-design"></div>
-        <div class="thumbnail three_three a14 revenue-strategy"></div>
+        <div class="thumbnail three_three a14 architecture"></div>
         <div class="thumbnail two_three a15 visual-media"></div>
         <div class="thumbnail one_three a16"></div>
         <div class="thumbnail six_five a17 visual-media"></div>
-        <div class="thumbnail one_one a18"></div>
-        <div class="thumbnail one_one a19"></div>
-        <div class="thumbnail one_one a20"></div>
-        <div class="thumbnail one_one a21"></div>
+        <div class="thumbnail four_four a18 revenue-strategy"></div>
+<!-- no 19-21 intentionally left blank -->
         <div class="thumbnail two_two a22"></div>
-        <div class="thumbnail four_three a23 revenue-strategy"></div>
+<!-- no 23 intentionally left blank -->
         <div class="thumbnail two_two a24"></div>        
         <div class="thumbnail one_two a25"></div>
-        <div class="thumbnail one_one a26"></div>
-        <div class="thumbnail one_one a27"></div>
+        <div class="thumbnail one_two a26"></div>
+        <div class="thumbnail one_two a27"></div>
         <div class="thumbnail three_two a28 revenue-strategy"></div>
-        <div class="thumbnail one_one a29"></div>
-        <div class="thumbnail one_one a30"></div>
+<!-- no 29-30 intentionally left blank -->
         <div class="thumbnail six_five a31 experience-design"></div>
         <div class="thumbnail two_two a32"></div>
         <div class="thumbnail two_two a33"></div>
         <div class="thumbnail two_two a34"></div>
+<!-- no 46 intentionally moved -->
+        <div class="thumbnail six_five a46 revenue-strategy"></div>
         <div class="thumbnail one_one a35"></div>
+
         <div class="thumbnail two_one a36"></div>
         <div class="thumbnail three_four a37"></div>
         <div class="thumbnail one_two a38"></div>
         <div class="thumbnail two_two a39"></div>
         <div class="thumbnail two_two a40"></div>
         <div class="thumbnail one_one a41"></div>
-        <div class="thumbnail three_three a42 architecture"></div>
-        <div class="thumbnail one_one a43"></div>
+        <div class="thumbnail four_three a42 architecture"></div>
+
         <div class="thumbnail two_two a44"></div>
-        <div class="thumbnail one_two a45"></div>
-        <div class="thumbnail six_five a46 revenue-strategy"></div>
-        <div class="thumbnail two_two a47"></div>
+
+
         <div class="thumbnail four_four a48 revenue-strategy"></div>
+        <div class="thumbnail two_two a47"></div>
         <div class="thumbnail two_two a49"></div>
-
-
 
       </div>
     </div>
